--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,13 @@ setuptools==69.5.1
 pymysql==1.1.0
 httpx>=0.24.0
 appwrite>=10.0.0
+uvicorn[standard]==0.24.0
+pydantic[email]==1.10.7
+python-jose[cryptography]==3.3.0
+PyJWT==2.8.0
+bcrypt==4.0.1
+python-multipart==0.0.6
+httpx==0.25.0
+psutil==5.9.6
+python-dotenv==1.0.0
+aiofiles==23.2.1
