--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,76 @@
+# CyberNova AI Backend Requirements
+# FastAPI and web server dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+starlette==0.27.0
+
+# HTTP client and CORS
+httpx==0.25.2
+
+# Authentication and security
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+bcrypt==4.1.2
+cryptography==41.0.8
+
+# Email functionality
+secure-smtplib==0.1.1
+
+# Database dependencies
+sqlite3  # Built-in with Python, no installation needed
+pymysql==1.1.0
+SQLAlchemy==2.0.23  # Optional: for ORM if needed
+
+# Data validation and models
+pydantic[email]==2.5.0
+email-validator==2.1.0
+
+# WebSocket support
+websockets==12.0
+
+# System monitoring and scanning
 psutil==5.9.6
-numpy==1.24.3
-scikit-learn==1.3.0
-pydantic==2.4.2
+python-nmap==0.7.1
+scapy==2.5.0
+
+# Timezone handling
+pytz==2023.3
+
+# Appwrite SDK
+appwrite==4.1.0
+
+# Background tasks and async
+asyncio  # Built-in with Python
+contextvars  # Built-in with Python
+
+# JSON and data handling
+orjson==3.9.10  # Fast JSON library (optional alternative to built-in json)
+
+# System information
+platform  # Built-in with Python
+socket  # Built-in with Python
+hashlib  # Built-in with Python
+
+# Environment variables
+python-dotenv==1.0.0
+
+# Development and debugging
+python-multipart==0.0.6
+
+# Additional utilities
+typing-extensions==4.8.0
+annotated-types==0.6.0
+
+# Production server (alternative to uvicorn)
+gunicorn==21.2.0
+
+# Health monitoring
+prometheus-client==0.19.0  # Optional: for metrics
+
+# Logging
+structlog==23.2.0  # Optional: structured logging
+
+# Testing (optional)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2  # Already listed above
